# cliplus

./: .gitignore  CLAUDE.md  build.bat  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: DESIGN.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  sync_scheduler.rs  tray.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/db/: clips.rs  mod.rs  settings.rs  snippets.rs  sync.rs
src-tauri/src/sync/: engine.rs  mod.rs  onedrive.rs  types.rs  webdav.rs
src/components/: Settings.vue  SnippetPanel.vue
